--- a/exec/배포문서.md
+++ b/exec/배포문서.md
@@ -20,3 +20,46 @@ npm run build
 npm run lint
 ```
 
+# Dependencies
+[Back-end]
+MySQL
+Java 8+
+Gradle 6.7+
+Eclipse or IntelliJ
+
+[Front-end]
+Node 14+
+VS Studio
+
+# mysql 접근
+url: jdbc:mysql://localhost:3306
+username: root
+password: 1234
+
+# 데이터베이스 생성
+```sql
+create database IF NOT EXISTS `ssafy_web_db` collate utf8mb4_general_ci;
+```
+
+# Front-end Setup
+```bash
+cd src/main/resources 
+npm install
+```
+
+# Front-end Webpack Dev. 모드 실행
+```bash
+cd src/main/resources 
+npm run serve
+```
+
+# Front-end 빌드
+```bash
+cd src/main/resources 
+npm run build
+```
+
+# Back-end + Front-end 전체 빌드 (프로젝트 루트 디렉토리에서 수행)
+```bash
+gradle clean build
+```
